<resources>
    <string name="app_name" translatable="false">Spines</string>
    <string name="notification_channel" translatable="false">CameraService</string>
    <string name="notification_title">Spines is running.</string>
    <string name="notification_text">Don\'t remove this notification.</string>
    <string name="permission_denied">Permission required.</string>
    <string name="record_button" translatable="false">Start and Stop record.</string>
    <string name="youtube_button" translatable="false">Youtube.</string>
    <string name="button_battery" translatable="false">Battery button.</string>
    <string name="yandex_email" translatable="false">video@yandex.ru</string>
    <string name="yandex_email_help">yandex mail of the video sender</string>
    <string name="yandex_app_password" translatable="false">abcdefghijklmnopq</string>
    <string name="yandex_app_password_help">yandex mail app password</string>
    <string name="tg_bot_token" translatable="false">0123456789:yNI4gb676nu5yv45IuniNiH6nInIniiOIn</string>
    <string name="tg_bot_token_help">telegram bot token</string>
    <string name="tg_user_id" translatable="false">9876543210</string>
    <string name="tg_user_id_help">telegram user id</string>
    <string name="next_email" translatable="false">https://cloud.example.com/remote.php/dav/files/username/</string>
    <string name="next_email_help">nextcloud login or folder link</string>
    <string name="next_pass" translatable="false">nAg3o-5vR6W-282u4-gliml-P8RqY</string>
    <string name="next_pass_help">application password in nextcloud</string>
</resources>